# squirrel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: nightly-release.yml
crates/geko/: Cargo.toml
crates/geko/src/: io.rs  main.rs
crates/geko_common/: Cargo.toml
crates/geko_common/src/: io.rs  lib.rs
crates/geko_ir/: Cargo.toml
crates/geko_ir/src/: atom.rs  expr.rs  lib.rs  stmt.rs
crates/geko_jit/: Cargo.toml
crates/geko_jit/src/: lib.rs  meta.rs
crates/geko_lex/: Cargo.toml
crates/geko_lex/src/: errors.rs  lexer.rs  lib.rs  token.rs
crates/geko_parse/: Cargo.toml
crates/geko_parse/src/: errors.rs  lib.rs  parser.rs
crates/geko_rt/: Cargo.toml
crates/geko_rt/src/: error.rs  interpreter.rs  lib.rs  modules.rs  refs.rs
crates/geko_rt/src/builtins/: convert.rs  core.rs  crypto.rs  dict.rs  env.rs  fs.rs  is.rs  list.rs  math.rs  mem.rs  mod.rs  process.rs  result.rs  time.rs  utils.rs
crates/geko_rt/src/eval/: expr.rs  stmt.rs
crates/geko_rt/src/rt/: mod.rs  realm.rs  value.rs
crates/geko_sema/: Cargo.toml
crates/geko_sema/src/: errors.rs  lib.rs  scope.rs
crates/geko_tests/: Cargo.toml
crates/geko_tests/src/: assertion.rs  io.rs  lex.rs  lib.rs  parse.rs  rt.rs  sema.rs
crates/geko_tests/src/snapshots/: geko_tests__lex__lex_1.snap  geko_tests__lex__lex_2.snap  geko_tests__lex__lex_3.snap  geko_tests__lex__lex_4.snap  geko_tests__lex__lex_5.snap  geko_tests__parse__parse_1.snap  geko_tests__parse__parse_2.snap  geko_tests__parse__parse_3.snap  geko_tests__rt__rt_for.snap  geko_tests__rt__rt_hello_world.snap  geko_tests__sema__sema_1.snap  geko_tests__sema__sema_2.snap  geko_tests__sema__sema_3.snap  geko_tests__sema__sema_4.snap  geko_tests__sema__sema_5.snap
crates/geko_wasm/: Cargo.toml
crates/geko_wasm/src/: io.rs  lib.rs
crates/squirrel/src/: io.rs  main.rs
crates/squirrel_ast/src/: stmt.rs
crates/squirrel_common/src/: io.rs
crates/squirrel_rt/: Cargo.toml
crates/squirrel_rt/src/: interpreter.rs
crates/squirrel_rt/src/builtins/: core.rs  dict.rs  env.rs  fs.rs  is.rs  list.rs  mod.rs  mods.rs  process.rs  time.rs
crates/squirrel_rt/src/eval/: expr.rs  stmt.rs
crates/squirrel_rt/src/rt/: flow.rs  value.rs
crates/tick_rt/: Cargo.toml
crates/tick_rt/src/: interpreter.rs  trace.rs
crates/tick_rt/src/builtins/: core.rs  crypto.rs  env.rs  is.rs  list.rs  mem.rs  mod.rs  mods.rs  process.rs
crates/tick_rt/src/eval/: stmt.rs
crates/tick_rt/src/rt/: value.rs
examples/anon_fn/: example.gk  example.ql
examples/bail/: example.gk  example.ql
examples/classes/: example.ql  example_1.gk  example_2.gk
examples/convert/: example.gk
examples/crypto/: example.gk  example.ql
examples/dicts/: example.gk
examples/enums/: example.gk  example.ql
examples/env/: example.gk  example.ql
examples/for/: example.gk  example.ql
examples/fs/: example.gk
examples/game_of_life/: gol.gk  gol.ql
examples/imports/: a.gk  a.ql  b.gk  b.ql
examples/is/: example.gk  example.ql
examples/lists/: example.gk  example.ql  lists.ik
examples/loops/: example_1.gk  example_2.gk
examples/math/: example.gk  example.ql
examples/mem/: example.gk  example.ql
examples/palindrome/: palindrome.gk  palindrome.ik  test.py
examples/process/: example.gk  example.ql  test.ik
examples/range/: example.gk  example.ql
examples/readln/: example.gk  example.ql
examples/result/: example.gk
examples/time/: example.gk
examples/traits/: example.gk  example.ql
examples/types/: example.ql
examples/welcome/: example_1.gk  example_2.gk
scripts/: build.sh
syntax/: DESIGN.md
tests/: zero_division.gk  zero_division.ql
tests/types/: a.gk  a.ql  b.gk  b.ql
(+9 files in other folders)
