[workspace]
members = [
    "crates/tick",
    "crates/tick_ast",
    "crates/tick_common",
    "crates/tick_lex",
    "crates/tick_parse",
    "crates/tick_rt",
    "crates/tick_sema",
    "crates/tick_tests",
    "crates/tick_wasm",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
