[workspace]
members = [
    "crates/geko",
    "crates/geko_ir",
    "crates/geko_common",
    "crates/geko_lex",
    "crates/geko_parse",
    "crates/geko_rt",
    "crates/geko_sema",
    "crates/geko_tests",
    "crates/geko_wasm", "crates/geko_jit",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
