[package]
name = "geko_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
geko_common = { path = "../geko_common" }
geko_lex = { path = "../geko_lex" }
geko_parse = { path = "../geko_parse" }
geko_ir = { path = "../geko_ir" }
geko_sema = { path = "../geko_sema" }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
rand = "0.10.0"
sysinfo = "0.38.3"
base64 = "0.22.1"
md-5 = "0.11.0"
hex = "0.4.3"
sha2 = "0.11.0"
sha1 = "0.11.0"
camino = "1.2.2"
chrono = "0.4.44"
