[package]
name = "geko_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.46.3"
camino = "1.2.2"
geko_common = { path = "../geko_common" }
geko_lex = { path = "../geko_lex" }
geko_parse = { path = "../geko_parse" }
geko_sema = { path = "../geko_sema" }
geko_ir = { path = "../geko_ir" }
geko_rt = { path = "../geko_rt" }
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
