[package]
name = "squirrel_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
squirrel_common = { path = "../squirrel_common" }
squirrel_lex = { path = "../squirrel_lex" }
squirrel_parse = { path = "../squirrel_parse" }
squirrel_ast = { path = "../squirrel_ast" }
squirrel_sema = { path = "../squirrel_sema" }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
rand = "0.10.0"
sysinfo = "0.38.3"
base64 = "0.22.1"
md-5 = "0.11.0"
hex = "0.4.3"
sha2 = "0.11.0"
sha1 = "0.11.0"
camino = "1.2.2"
chrono = "0.4.44"
